rename the tmux configuration file from conf to tmux.conf.  Lots of miscellaneous changes too

--- a/tmux.conf
+++ b/tmux.conf
@@ -9,13 +9,14 @@ set -g display-panes-time 1300
 set-option -g visual-bell on
 
 ##### mouse mode on!
-##### but, I like the terminal to handle clicks and selections, not tmux
-##### so, I only use the mouse to scroll through the history
-##### in iterm2 preferences -> Profiles -> Terminal, I check "Enable mouse reporting" and "Report mouse wheel events" but uncheck "Report mouse clicks & drags"
 set -g mouse on
+bind -T copy-mode-vi MouseDragEnd1Pane send-keys -X copy-pipe-no-clear # copy to system clipboard but don't clear the selection
+bind-key -T copy-mode-vi DoubleClick1Pane select-pane \; send-keys -X select-word \; run-shell -d 0.3 \; send-keys -X copy-pipe-no-clear
+bind-key -T copy-mode-vi TripleClick1Pane select-pane \; send-keys -X select-line \; run-shell -d 0.3 \; send-keys -X copy-pipe-no-clear
 
-
-
+## search easily with / and f
+bind-key / copy-mode \; send-key ?
+bind-key f copy-mode \; send-key ?
 
 
 ## move around panes with vim keybindings
@@ -26,8 +27,6 @@ bind k select-pane -U
 bind l select-pane -R
 bind o select-pane -t :.+
 bind O select-pane -t :.-
-
-
 # move window left/right
 bind w 'swap-window -t -; select-window -t -'
 bind e 'swap-window -t +; select-window -t +'
@@ -51,13 +50,6 @@ bind u last-pane
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 bind T source-file ~/.tmux/theme \; display "Theme file Reloaded!"
 
-# choose windows in a tree, grouped by session, expanded by default
-if-shell 'tmux -V |grep "tmux next-3.3"' "bind s choose-tree -GNZ -O index"
-if-shell 'tmux -V |grep "tmux 2.9"' "bind s choose-tree -GNsw"
-if-shell 'tmux -V |grep "tmux 2.8"' "bind s choose-tree -GZ"
-if-shell 'tmux -V |grep "tmux 2.7"' "bind s choose-tree -GNsw"
-if-shell 'tmux -V |grep "tmux 2.3"' "bind s choose-tree -suw"
-
 # press \ to toggle pane synchronization
 bind '\' setw synchronize-panes
 
@@ -78,12 +70,19 @@ set-window-option -g alternate-screen on
 set-window-option -g automatic-rename on
 set -g default-terminal "screen-256color"
 set -g terminal-overrides "screen*:colors=256"
+set -g focus-events on
 
-## automatically resize panes when a pane exits
-set-hook -g pane-exited 'select-layout tiled'
+# these settings for underlined URL support
+set -ga terminal-features "*:hyperlinks"
+set -ga terminal-features "screen-256color:RGB"
+set -ga terminal-overrides ',*:Smulx=\E[4::%p1%dm'  # undercurl support
+set -ga terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'  # underscore colours - needs tmux-3.0
 
-
-# source the theme file here.
-# I tend to change my theme much more frequently than my hotkeys
-# so separate out the functionality from the look'n'feel
-source ~/.tmux/theme
+set -g @plugin 'tmux-plugins/tmux-sidebar'
+set -g @plugin 'tmux-plugins/tmux-yank'
+set -g @fpp-mode 'edit'
+set -g @plugin 'tmux-plugins/tmux-fpp'
+set -g @plugin 'sainnhe/tmux-fzf'
+set -g @plugin 'wfxr/tmux-fzf-url'
+set -g @plugin "nordtheme/tmux"
+run '~/.config/tmux/plugins/tpm/tpm'  # initialize TMUX plugin manager
